2008-01-31  Hans Boehm <Hans.Boehm@hp.com> (mostly from Andreas Tobler)

	* tests/test.c: Call GC_INIT for DARWIN; test system type using
	gcconfig.h-defined macros.

2008-01-29  Hans Boehm <Hans.Boehm@hp.com>

	* allchblk.c (GC_merge_unmapped, GC_freehblk): Refuse to create
	blocks large enough that their size, when interpreted as a signed
	value, would be negative.
	* include/private/gc_priv.h: Comment hb_sz range limit.

2008-01-29  Hans Boehm <Hans.Boehm@hp.com>  (with help from Manuel Serrano)
	
	* mark.c (GC_push_next_marked): correct comment.
	* Makefile.direct: document NO_PROC_STAT.
	* include/private/gcconfig.h: Accomodate NO_PROC_STAT.

2008-01-10  Hans Boehm <Hans.Boehm@hp.com>
	
	* include/gc_version.h, configure.ac, doc/README:
	Change to version 7.1alpha3.
	* configure: Regenerate.

[7.1alpha2]

2008-01-10  Hans Boehm <Hans.Boehm@hp.com>
	
	* include/gc_version.h, configure.ac, doc/README:
	Change to version 7.1alpha2.
	* configure: Regenerate.

2008-01-10  Hans Boehm <Hans.Boehm@hp.com>
	
	* Makefile.am: Mention atomic_ops.c and atomic_ops_sysdeps.S
	again.  Refer to build directory as ".".
	* Makefile.in: Regenerate.
	
2008-01-10  Hans Boehm <Hans.Boehm@hp.com>

	* configure.ac: Ignore --enable-parallel-mark on Darwin for now.
	* configure: Regenerate.
	* darwin_stop_world.c: Add FIXME comment for parallel marker.

2008-01-09  Hans Boehm <Hans.Boehm@hp.com>

	* include/private/gc_priv.h: Update MAX_ROOT_SETS
	and LOG_PHT_ENTRIES to handle larger heaps.

2008-01-03  Hans Boehm <Hans.Boehm@hp.com>

	* include/gc.h (GC_INIT,GC_init): Update comments.

2008-01-03  Hans Boehm <Hans.Boehm@hp.com> (based on a patch from
	John Bowman, and an ancient patch from Fergus Henderson)

	* allchblk.c, alloc.c, include/private/gc_priv.h:
	Track GC_bytes_dropped and use in GC triggering decisions.
	* alloc.c (min_bytes_allocd): Weight atomic blocks less.

2008-01-02  Hans Boehm <Hans.Boehm@hp.com>

	* alloc.c (GC_add_to_heap): Call GC_install_header(p) AFTER