@@ -1,3 +1,8 @@
+2008-02-06  Hans Boehm <Hans.Boehm@hp.com> (mostly from Henning Makholm)
+
+	* include/private/gc_priv.h, mark_rts.c, typd_mlc.c:
+	Add GC_push_typed_structures() to push GC_ext_descriptors.
+
 2008-01-31  Hans Boehm <Hans.Boehm@hp.com> (mostly from Andreas Tobler)
 
 	* tests/test.c: Call GC_INIT for DARWIN; test system type using
